syntax = "proto3";
package trinsic.services;

import "google/protobuf/struct.proto";

message IssueRequest {
    google.protobuf.Struct document = 1;
}

message IssueResponse {
    google.protobuf.Struct document = 1;
}

// Create Proof
message CreateProofRequest {
    google.protobuf.Struct reveal_document = 1;
    string document_id = 2;
}

message CreateProofResponse {
    google.protobuf.Struct proof_document = 1;
}

// Verify Proof
message VerifyProofRequest {
    google.protobuf.Struct proof_document = 1;
}

message VerifyProofResponse {
    bool valid = 1;
}

service Credential {
    rpc Issue(IssueRequest) returns (IssueResponse);

    rpc CreateProof(CreateProofRequest) returns (CreateProofResponse);

    rpc VerifyProof(VerifyProofRequest) returns (VerifyProofResponse);
}
